feat: index root comment id to allow for unnesting replies (#199)
* feat: index root comment id to allow for unnesting replies

* revert: condition

* fix: missing prop

* feat: add flat mode to comment replies

* chore: update docs

* docs(changeset): feat: add flat replies mode to comments list api

* chore: fix comments

* refactor: conditions

* refactor: rename table, better parent id missing handling

* chore: update turbo

* chore: add missing property

* chore: update nextjs

* chore: remove rootCommentId

* chore: update libs

* chore: use debug sentry if dsn is not provided

* feat: index comment path

* feat: support flat mode in comments and replies

* chore: reply to correct id

* fix: pass mode

* fix: condition

* chore: use flattened replies in embed

* chore: simplify fetching logic
