# docs/public/indexer-openapi.yaml
@@ -72,6 +72,19 @@ paths:
           required: false
           name: sort
           in: query
+        - schema:
+            type: string
+            enum:
+              - nested
+              - flat
+            default: nested
+            description: >-
+              The mode to fetch comments in. Nested will return only the first
+              level of comments. Flat will return all replies sorted by
+              timestamp in descending order.
+          required: false
+          name: mode
+          in: query
       responses:
         '200':
           description: Retrieve a list of comments
